--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,12 +11,12 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 -   repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 22.3.0
     hooks:
     -   id: black
         args: [--config=pyproject.toml]
 
--   repo: https://github.com/cmhughes/latexindent.pl.git
-    rev: V3.20.4
-    hooks:
-    -   id: latexindent
+#-   repo: https://github.com/cmhughes/latexindent.pl.git
+#    rev: V3.20.4
+#    hooks:
+#    -   id: latexindent
